create hook n2 .eb config

--- a/.ebextensions/execute.config
+++ b/.ebextensions/execute.config
@@ -1,17 +1,16 @@
 files: 
-  "/opt/elasticbeanstalk/hooks/appdeploy/pre/execute.sh": 
+  "/opt/elasticbeanstalk/hooks/appdeploy/predeploy/execute.sh": 
     mode: "000755" 
     owner: root 
     group: root 
     content: |
       #!/bin/bash
-       sudo echo "prestart hook" >> /opt/prestart.txt
+      echo "prestart hook" >> /opt/prestart.txt
 
-  "/opt/elasticbeanstalk/hooks/appdeploy/post/execute.sh":
-    mode: "000755" 
-    owner: root 
-    group: root 
+  "/opt/elasticbeanstalk/hooks/appdeploy/postdeploy/execute.sh":
+    mode: "000755"
+    owner: root
+    group: root
     content: |
       #!/bin/bash
-       sudo echo "poststart hook" >> /opt/poststart.txt
-
+      echo "poststart hook" >> /opt/poststart.txt
