create hook n3 .eb config

--- a/.ebextensions/execute.config
+++ b/.ebextensions/execute.config
@@ -1,4 +1,14 @@
-files: 
+option_settings:
+  aws:elasticbeanstalk:application:environment:
+    MOUNT_DIRECTORY: '/var/app/current/app/image'
+
+container_commands:
+    01_remove_pre:
+        command: "rm -f /opt/elasticbeanstalk/hooks/appdeploy/predeploy/execute.sh.bak"
+    02_remove_post:
+        command: "rm -f /opt/elasticbeanstalk/hooks/appdeploy/postdeploy/execute.sh.bak"
+
+files:
   "/opt/elasticbeanstalk/hooks/appdeploy/predeploy/execute.sh": 
     mode: "000755" 
     owner: root 
